# pyspec

./: .gitignore  AGENTS.example.md  AGENTS.md  README.md  contract.py  contract.yaml  intent.md  package-lock.json  package.json  patterns.yaml  pm.patch.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: chart-ontology.md  generated-artifacts.md  intent.md  python-api.md  repo-layout.md  spec-ontology.md
examples/project_dispatch_board/: AGENTS.md  contract.yaml  pm.patch.yaml
examples/project_dispatch_board/sample_app/: product.py
examples/project_dispatch_board/spec/: spec.py  spec.yaml
examples/project_dispatch_board/src/project_dispatch_board/: product.py
examples/project_dispatch_board/tests/prod_bdd/: conftest.py  driver.py  test_generated_features.py
examples/project_dispatch_board/tests/spec_bdd/: conftest.py  test_generated_features.py
pm_contract/: __init__.py  audit.py  compile.py  content.py  guardrails.py  io.py  layers.py  layout.py  project.py  projection_validators.py  reference_driver.py  rules.py  validate.py
sample_app/: __init__.py  product.py
schemas/: author.schema.json  contract.schema.json  pm_patch.schema.json
schemas/layers/: core.author.schema.json  core.pm_patch.schema.json  core_events.author.schema.json  core_events.pm_patch.schema.json  core_http.author.schema.json  core_http.pm_patch.schema.json  core_http_persistence.pm_patch.schema.json  core_persistence.pm_patch.schema.json  core_ui_textual.author.schema.json  core_ui_textual.pm_patch.schema.json  core_ui_web.author.schema.json  core_ui_web.pm_patch.schema.json  core_workflow.author.schema.json  core_workflow.pm_patch.schema.json  full.author.schema.json  full.pm_patch.schema.json
src/pyspec_contract/: __init__.py  agent_prompts.py  api.py  audit.py  behaviors.py  binding_refs.py  cli.py  compile.py  content.py  guardrails.py  io.py  json_schema.py  layers.py  layout.py  operations.py  paths.py  patterns.yaml  project.py  projection_validators.py  reference_driver.py  rules.py  runtime.py  runtime_refs.py  targets.py  type_expr.py  validate.py
src/pyspec_contract/schemas/: author.schema.json  contract.schema.json  spec.schema.json
src/pyspec_contract/schemas/layers/: core.author.schema.json  core_events.author.schema.json  core_http.author.schema.json  core_ui_textual.author.schema.json  core_ui_web.author.schema.json  core_workflow.author.schema.json  full.author.schema.json
tests/: helpers.py  test_agent_prompts.py  test_audit_outputs.py  test_author_contract.py  test_content_resolvers.py  test_contract.py  test_examples.py  test_external_spec_validators.py  test_fsm_composition.py  test_package_api.py  test_projection_validators.py  test_schema_inventory.py  test_schema_ontology.py  test_state_machine_composition.py
tests/prod_bdd/: conftest.py  test_generated_features.py
tests/spec_bdd/: conftest.py  test_generated_features.py
