[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspec-contract"
version = "0.1.0"
description = "Whole-app product specification compiler and generated artifact validator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastjsonschema>=2,<3",
  "PyYAML>=6,<7",
  "jsonschema>=4,<5",
  "pytest>=8,<10",
  "pytest-bdd>=8,<9",
  "Pillow>=10,<13",
  "playwright>=1.56,<2",
  "textual>=8,<9",
]

[project.optional-dependencies]
dev = [
  "openapi-spec-validator>=0.7,<0.8",
  "cwltool>=3.1,<4",
]

[project.scripts]
pyspec = "pyspec_contract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyspec_contract = ["schemas/**/*.json", "patterns.yaml"]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
  "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:gherkin.gherkin_line",
]
markers = [
  "contract: generated contract scenario",
  "spec: generated spec harness scenario",
  "prod: generated prod harness scenario",
  "project_board_empty: generated scenario tag",
  "project_board_ready: generated scenario tag",
  "project_create_api_success: generated scenario tag",
  "project_approve_success: generated scenario tag",
  "project_approval_notice_workflow: generated scenario tag",
  "project_workspace_composed: generated scenario tag",
]
